minor edit/housekeeping activity

--- a/src/pages/do-olls-that-will-talk/index.astro
+++ b/src/pages/do-olls-that-will-talk/index.astro
@@ -11,7 +11,11 @@ import dollSvgUrl from "./_dolls-that-will-talk.svg";
   <p class="subtitle">It's Beginning to Look a Lot Like Christmas</p>
 
   <section>
-    <p>[Your opening hook here]</p>
+    <p>
+      Have a listen to these two renditions of the Christmas classic. Pay
+      particular attention to where the emphasis lands when singing the word
+      "dolls".
+    </p>
 
     <h2>Bublé: on the beat</h2>
     <p>[1-2 sentences: what you hear, where it lands]</p>
