--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -4,13 +4,16 @@ import dollSvgUrl from "./do-olls-that-will-talk/_dolls-that-will-talk.svg";
 ---
 
 <Layout title="goude.se" description="Personal site">
-  <h1 id="entry-point">Entry Point</h1>
+  <h1 id="entry-point">Point of Entry</h1>
   <p class="subtitle">
     Leave the campground a little cleaner than you found it.
   </p>
 
   <section>
     <h2>It's Beginning to Look a Lot Like Christmas</h2>
+    <p>
+      Dolls or do-olls? <a href="/do-olls-that-will-talk/"> It's a mystery!</a>
+    </p>
 
     <a href="/do-olls-that-will-talk/" class="notation-link">
       <figure class="notation-preview">
@@ -21,7 +24,7 @@ import dollSvgUrl from "./do-olls-that-will-talk/_dolls-that-will-talk.svg";
             loading="lazy"
           />
         </div>
-        <figcaption>A timing difference I can't unhear (WIP)</figcaption>
+        <figcaption>A timing difference that can't be unheard (WIP)</figcaption>
       </figure>
     </a>
   </section>
@@ -42,8 +45,6 @@ import dollSvgUrl from "./do-olls-that-will-talk/_dolls-that-will-talk.svg";
 
   .notation-frame {
     width: 100%;
-    height: 280px;
-    overflow: hidden;
     border-radius: 4px;
   }
 
