fix mode toggle

--- a/src/pages/do-olls-that-will-talk/index.astro
+++ b/src/pages/do-olls-that-will-talk/index.astro
@@ -18,8 +18,9 @@ import dollWepbUrl from "./_do-olls-audacity.webp";
   <section>
     <p>
       Have a listen to these two renditions of the Christmas classic. Pay
-      particular attention to where the emphasis lands when singing the word
-      "dolls".
+      particular attention to where the emphasis lands when <span
+        class="thoughts">tra-la-laaa</span
+      > singing the word "dolls".
     </p>
 
     <p class="notes">
