--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -4,7 +4,7 @@ import Nav from "./Nav.astro";
 import ThemeToggle from "./ThemeToggle.astro";
 
 interface Props {
-  current?: string;
+  current?: string | undefined;
 }
 
 const { current } = Astro.props;
