--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -5,9 +5,9 @@ import Header from "@/components/Header.astro";
 import Footer from "@/components/Footer.astro";
 
 interface Props {
-  title?: string;
-  description?: string;
-  current?: string;
+  title?: string | undefined;
+  description?: string | undefined;
+  current?: string | undefined;
 }
 
 const { title, description, current } = Astro.props;
